# Dispatcher

./: .gitignore  README.md  pyproject.toml
.claude/skills/verify/: SKILL.md
.github/workflows/: ci.yml
dispatcher/: config.py  core.py  errors.py  task.py  worker.py
dispatcher/api/: dependencies.py  main.py  services.py  tasks.py
dispatcher/domain/: __init__.py  ports.py
dispatcher/infrastructure/: __init__.py  broker.py  sqlite.py
dispatcher/use_cases/: read_services.py  read_tasks.py  register_service.py  submit_task.py
docket/: __init__.py  config.py  core.py  security.py
docket/api/: dependencies.py  main.py  services.py  tasks.py
docket/domain/: __init__.py  models.py  ports.py
docket/infrastructure/: __init__.py  broker.py  repositories.py  sqlite.py  tables.py
docket/use_cases/: __init__.py  claim_task.py  heartbeat.py  read_services.py  read_tasks.py  reclaim_expired.py  register_service.py  resolve_task.py  submit_task.py
src/dispatcher/: __init__.py
tests/: conftest.py  fakes.py  test_config.py  test_core.py  test_smoke.py  test_task.py  test_worker.py
tests/api/: conftest.py  test_services.py  test_tasks.py
tests/domain/: test_models.py
tests/infrastructure/: test_broker.py  test_sqlite.py
tests/use_cases/: test_claim_task.py  test_heartbeat.py  test_lifecycle.py  test_read_services.py  test_read_tasks.py  test_reclaim_expired.py  test_register_service.py  test_resolve_task.py  test_submit_task.py
