[project]
name = "dispatcher"
version = "0.1.0"
description = "Dispatcher"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "codespell>=2.3.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["dispatcher*"]

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["dispatcher", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "SIM", "S", "PT", "RUF"]

[tool.ruff.lint.per-file-ignores]
# Tests may use asserts and hard-coded values.
"tests/**" = ["S101", "S105", "S106"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = []

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
